Fixes tight spacing on small screens

--- a/assets/site.css
+++ b/assets/site.css
@@ -513,7 +513,7 @@ h2 {
 
 @media only screen and (max-width : 529px) {
   p {
-    width: 95%; 
+    width: 91%; 
   }
 }
 
